--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ogbbv#1" target="_blank">首页</a> | <a href="https://d2jsgnf2snq1t5.cloudfront.net/1?cqnuetfin" target="_blank">动态网</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/2?zdkksy" target="_blank">大纪元</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/4?gyvdmyx" target="_blank">看中国</a> | <a href="https://d3abchfok6e2j.cloudfront.net/pHh5q?annokhl" target="_blank">新生网</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/tktpt?ngvukj" target="_blank">阿波罗网</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/Mjpvu?tqbihje" target="_blank">干净世界</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/10?xypddut" target="_blank">退党服务</a> | <a href="https://d3vg08phoazui6.cloudfront.net/Rffqf?pzekr" target="_blank">明慧广播</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/nw9Vn?sqijprvkt" target="_blank">传奇时代</a> | <a href="https://d8jw662akk94j.cloudfront.net/AF9AG?dwxbv" target="_blank">新境界影视</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/zqMQA?igxbkx" target="_blank">文昭谈论</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/7?rkmgdqye" target="_blank">明慧</a></p><p><a href="https://d22owz1tif1d5u.cloudfront.net/9?enecok" target="_blank">大法</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/3?zyrwb" target="_blank">新唐人</a> | <a href="https://djwddd4nnr0na.cloudfront.net/obAhT?sxyckn" target="_blank">人民报</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/xXNHu?zlpowd" target="_blank">放光明</a> | <a href="https://dycmgeziwp90b.cloudfront.net/5?efomkr" target="_blank">新纪元</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/6?nqyyub" target="_blank">希望之声</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/11?ecurdzyey" target="_blank">无界网络</a> | <a href="https://dwzgr3popmlhv.cloudfront.net/Pueji?gvvols" target="_blank">追查国际</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/16?tbkaqmj" target="_blank">明慧之窗</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/LdvzZ?itibwie" target="_blank">细语人生</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/fBn3r?wcgnd" target="_blank">新世纪影视</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/PUWMb?nzhldzpb" target="_blank">江峰时刻</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/8?sehcjhvjj" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?vfjwebarg#1" target="_blank">首页</a> | <a href="https://d2cenl0crtmzsc.cloudfront.net/1?axfjo" target="_blank">动态网</a> | <a href="https://d3twnfu6dd6xpm.cloudfront.net/2?fwrfhh" target="_blank">大纪元</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/4?iwnfkz" target="_blank">看中国</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/pHh5q?gxndqiifb" target="_blank">新生网</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/tktpt?oqtttlx" target="_blank">阿波罗网</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/Mjpvu?wbxqtyba" target="_blank">干净世界</a> | <a href="https://d265ujbtchne9r.cloudfront.net/10?zfhfyamiz" target="_blank">退党服务</a> | <a href="https://divmj5v44rbg.cloudfront.net/Rffqf?nsbyp" target="_blank">明慧广播</a> | <a href="https://dlvlk7o3qgp9v.cloudfront.net/nw9Vn?gawpp" target="_blank">传奇时代</a> | <a href="https://d78f5frq5siq8.cloudfront.net/AF9AG?tzgpzx" target="_blank">新境界影视</a> | <a href="https://d3siwajeg0khti.cloudfront.net/zqMQA?ynqidzam" target="_blank">文昭谈论</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/7?fdlezb" target="_blank">明慧</a></p><p><a href="https://d1b0mjr6ppvor4.cloudfront.net/9?kcbcukl" target="_blank">大法</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/3?ghmbrxwn" target="_blank">新唐人</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/obAhT?aulcnezj" target="_blank">人民报</a> | <a href="https://d3gus727acem18.cloudfront.net/xXNHu?goryhuj" target="_blank">放光明</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/5?mdvtsdvb" target="_blank">新纪元</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/6?ihqvxsc" target="_blank">希望之声</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/11?xbaflo" target="_blank">无界网络</a> | <a href="https://dycg1eql8aigr.cloudfront.net/Pueji?mnrfoqson" target="_blank">追查国际</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/16?ugnzr" target="_blank">明慧之窗</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/LdvzZ?cexcjtz" target="_blank">细语人生</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/fBn3r?tctsjhfm" target="_blank">新世纪影视</a> | <a href="https://dmepc9x6zy689.cloudfront.net/PUWMb?woidemyep" target="_blank">江峰时刻</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/8?orqzi" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309575.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309577-GettyImages-2165157487-320x200.jpg"><p align="center">中国内需疲软 跨国企业：消费信心极低</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309575.md#1" title="中国内需疲软 跨国企业：消费信心极低""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309577-GettyImages-2165157487-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309562.md#1" title="医生涉山西奥瑞买尸案 牵出“案中案”？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14285633-693971-320x200.jpg">&nbsp;</a>
@@ -13,15 +13,15 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309324.md#1" title="奥运总结：美国超越中国 位居奖牌榜首""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309346-GettyImages-2166379441-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309156.md#1" title="股市动荡 美国这些房市或最易受到冲击""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309172-abde298874360cedc1f01dd0b86f7a6f-320x200.jpeg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309656.md#1">加澳重申台海稳定 台外交部：民主阵营共识</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309642.md#1">中国新冠疫情升温 广东7月确诊增加逾万例</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309656.md#1">加澳重申台海稳定 台外交部：民主阵营共识</a><br>
+:clock8: <em>60分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309642.md#1">中国新冠疫情升温 广东7月确诊增加逾万例</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309630.md#1">台风安比将生成 专家：三台风朝日本移动</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309634.md#1">中国疫情再度升温 专家回应引质疑</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309362.md#1">【翻墙必看】跨国公司对中国内需疲软敲响警钟</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309575.md#1">中国内需疲软 跨国企业：消费信心极低</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309622.md#1">美防长要求航母赶赴中东 再派潜艇前往</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309622.md#1">美防长要求航母赶赴中东 再派潜艇前往</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309562.md#1">医生涉山西奥瑞买尸案 牵出“案中案”？</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309576.md#1">阿汤哥空降奥运闭幕式 传递会旗影片线上看</a><br>
+:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309576.md#1">阿汤哥空降奥运闭幕式 传递会旗影片线上看</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a><br>
@@ -108,13 +108,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306958.md#1">孟加拉总理出逃前刚访京 一带一路添变数</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306133.md#1">【新闻欣视角】中国富豪“润”更多 中共又失老朋友</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306679.md#1">【菁英论坛】股市大震荡 如何冲击全球经济</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1xpzmwd9z70om.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1xpzmwd9z70om.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 44,652</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2tpagigsks9we.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 44,652</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 434,342,407 人
+!共 434,342,803 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308794.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288586-2024-7-3-dc-press-oh-01-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308794.md#1">首位活摘器官幸存者：站出来揭露中共邪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308612.md#1">揭买尸案律师指“更高层介入” 其安全受关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308455.md#1">【新闻欣视角】奥瑞只是冰山一角 央企涉案 黑幕惊人</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307754.md#1">揭盗卖尸体案 律师易胜华相关发文被删</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307581.md#1">来自中国农民的控诉：中共暴政 村霸治村</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307150.md#1">陈文清王小洪被列“恶人榜”递44国备制裁</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309373.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289047-175890-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309373.md#1">资金不足 大陆部分经销商拖延提供汽车合格证</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309298.md#1">估值1.3亿厂房被法院1.8万元拍卖掉 引热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309321.md#1">中国银行业一个多月遭1357张罚单</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309042.md#1">断供之下 中国上半年住宅类法拍房激增</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308935.md#1">大陆“零食之王”利润下滑89% 股价跌破发行价</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308645.md#1">中共社科网发文吁大湾区统一货币证件 遭下架</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308824.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308878-a9ca4883a9c07d60dadaf8e958e54b65-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308824.md#1">中共政法系统掀举报风 大批官员上网“鸣冤”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308705.md#1">澳洲首次测试SM-6先进舰载防空导弹 剑指中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308692.md#1">菲律宾谴责中共军机在南海的危险骚扰行为</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308646.md#1">美学者：台应增军费至GDP5% 严肃看生存威胁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308176.md#1">【中国禁闻】官媒混战 掼蛋之争涉高层内斗？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308177.md#1">【环球直击】中企盗卖遗体更多案情细节曝光</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309634.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14304695-8d6e2aa89a1dc1d3e754e4cc5b38f01f-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309634.md#1">中国疫情再度升温 专家回应引质疑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309509.md#1">江苏一凉亭坍塌致多人死伤 官方通报遭质疑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309167.md#1">广东中山市发生凶案 致3死1伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308926.md#1">7月中国各种灾害至少造成328人失踪死亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308638.md#1">具有600年历史 张家口明代古城墙局部坍塌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308402.md#1">中共火箭解体产生数百碎片 逾千卫星面临危险</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309367.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309367.md#1">三退声明精选（2024/08/11）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308831.md#1">中国人花数千美元 从巴拿马VIP路径走线美国</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308968.md#1">女子实名举报山东税务干部一家三口进款4千万</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308687.md#1">武汉18岁青年失踪5天后 尸体被发现</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308630.md#1">传河南漯河郾城区法院一女法官遇害</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308516.md#1">三退声明精选（2024/08/09）</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306410.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/05/id13999070-GettyImages-1237394084-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306410.md#1">中共与西方“脱钩” 留欧学生遭夹击</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302373.md#1">新剧中挑战农妇角色 杨幂的造型引争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300362.md#1">巴黎奥运 中国女篮首战失利败给西班牙</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14299945.md#1">“北京中轴线”申遗成功 含毛纪念堂引争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299901.md#1">为玩“烟卡游戏” 四川六童偷六万元高档香烟</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297646.md#1">陕师大教师给女生发不雅照？9年前被举报无果</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
@@ -123,12 +123,12 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/17/n14252403.md#1">【专访】前中共特工谈跨境迫害运作内幕</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243718.md#1">【中国观察】日趋“密封”的北京政权</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/4/29/n14236832.md#1">中国人进入新冠和疫苗两类后遗症的苦难</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180530.md#1">【古韵流芳】和序文双璧同辉的滕王阁诗</a><br>
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307942.md#1">香港电车120年（中）——穿越时光的经典：战后古董电车</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180530.md#1">【古韵流芳】和序文双璧同辉的滕王阁诗</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307969.md#1">《牧人来拜》：卡拉瓦乔的写实意像</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279874.md#1">修容姑娘遇仙，躲入神像耳中避难</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307510.md#1">茶的艺术</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302059.md#1">小说：墙推倒了就是桥（下）</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304840.md#1">夏海珍——苦海泅渡的修炼故事（3）</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306700.md#1">甲子之辞（骈赋）</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/1992513/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
